src/objects/QPMS__ComplaintHistory__c.object
<CustomObject>
    <description>This is a common object for all object  History(Complaint module)</description>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <defaultValue>&apos;Updated&apos;</defaultValue>
        <description>This field is for to display the action values like Created,Updated,Deleted in Complaint trail</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Attachment_Id__c</fullName>
        <description>This field is used to save attachment name</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to save the Complaint id</description>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Complaint History</relationshipLabel>
        <relationshipName>Complaint_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Customer_Experience_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Customer Experience Type value</description>
        <label>Customer Experience Type</label>
        <referenceTo>QPMS__Customer_Experience_Type__c</referenceTo>
        <relationshipLabel>Complaint History</relationshipLabel>
        <relationshipName>Complaint_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This field is used to save the description of the filed</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>This field is used to save api name of the field</description>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>This field is used to save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <description>This field is used to differentiate the history object</description>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>This field is used to save new value in history object</description>
        <label>NewValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <description>This field is used to save the object name</description>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>This field is used to save the old value</description>
        <label>OldValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Service Provider value</description>
        <label>Service Provider</label>
        <referenceTo>QPMS__Service_Provider__c</referenceTo>
        <relationshipLabel>Complaint History</relationshipLabel>
        <relationshipName>Complaint_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent_Formula__c</fullName>
        <formula>TEXT( QPMS__Sub_Parent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Parent Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent_Prefix__c</fullName>
        <label>Sub Parent Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>This field is used to save related object</description>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Additional Details</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Complaint Reference</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>ComplaintInit</fullName>
                </value>
                <value>
                    <fullName>ComplaintGeneralTask</fullName>
                </value>
                <value>
                    <fullName>ComplaintGeneralSubTask</fullName>
                </value>
                <value>
                    <fullName>AdhocTask</fullName>
                </value>
                <value>
                    <fullName>ReviewDHR</fullName>
                </value>
                <value>
                    <fullName>ProductEvaluation</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>ServiceProvider</fullName>
                </value>
                <value>
                    <fullName>Complaint Details</fullName>
                </value>
                <value>
                    <fullName>Product User Details</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Approval</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Attachment</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Change Owner</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Change Due Date</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Void</fullName>
                </value>
                <value>
                    <fullName>Event Problem Codes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Codes</fullName>
                </value>
                <value>
                    <fullName>Reporter Information</fullName>
                </value>
                <value>
                    <fullName>Complainant Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for to show the value is created/updated</description>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to  check record deleted or not</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Complaint History</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__HistoryObject__c</columns>
        <columns>QPMS__Object__c</columns>
        <columns>QPMS__NewValue__c</columns>
        <columns>QPMS__OldValue__c</columns>
        <columns>QPMS__Sub_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>ComplaintHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>